# ckanext-fortify

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
ckanext/fortify/: anti_csrf.old  anti_csrf.py  anti_csrf_bkp.py  blueprint.py  config_declaration.yaml  helpers.py  plugin.py  schema.py  validators.py
ckanext/fortify/csrf/: anti_csrf.py  anti_csrf3.py
ckanext/fortify/logic/auth/: create.py  helpers.py  update.py
ckanext/fortify/templates/user/: perform_reset.html
