[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/fortify/i18n/ckanext-fortify.pot
width = 80

[init_catalog]
domain = ckanext-fortify
input_file = ckanext/fortify/i18n/ckanext-fortify.pot
output_dir = ckanext/fortify/i18n

[update_catalog]
domain = ckanext-fortify
input_file = ckanext/fortify/i18n/ckanext-fortify.pot
output_dir = ckanext/fortify/i18n
previous = true

[compile_catalog]
domain = ckanext-fortify
directory = ckanext/fortify/i18n
statistics = true